[tool.poetry]
name = "repl_python3_PI-Bot-Dc"
version = "0.1.1"
description = ""
authors = ["roksaga <<>>"]

[tool.poetry.dependencies]
python = "^3.8"
discord = "^1.0.1"
bs4 = "^0.0.1"
google-api-python-client = "^2.14.0"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
