[tool.poetry]
name = "PI-Bot-Dc"
version = "0.1.5"
description = ""
authors = ["roksaga <<>>"]

[tool.poetry.dependencies]
python = "^3.8"
discord = "^1.7.3"
google-api-python-client = "^2.15.0"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
